varnish (3.0.3plus~rc1-wm7) precise; urgency=low
  * Update streaming range patch to M.B.Grydeland's updated version

Change-Id: I4e388082676a54d6b7d542c66cd538feca9d6b75

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+varnish (3.0.3plus~rc1-wm7) precise; urgency=low
+
+  * Update streaming range patch to M.B.Grydeland's updated version
+
+ -- Mark Bergsma <mark@wikimedia.org>  Mon, 11 Feb 2013 13:09:54 +0000
+
 varnish (3.0.3plus~rc1-wm6) precise; urgency=low
 
   * Fix a deadlock of worker threads on the vca_pipe under load
 
- -- Mark Bergsma <mark@wikimedia.org>  Fri, 23 Nov 2012 13:51:55 +0000
+ -- Mark Bergsma <mark@wikimedia.org>  Mon, 11 Feb 2013 13:08:51 +0000
 
 varnish (3.0.3plus~rc1-wm5) precise; urgency=low
 
