--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.3plus~rc1-wm15) precise; urgency=low
+
+  * Add libvmod_netmapper
+
+ -- Brandon Black <bblack@wikimedia.org>  Wed, 18 Sep 2013 18:15:29 +0000
+
 varnish (3.0.3plus~rc1-wm14) precise; urgency=low
 
   * Don't increase cache_hit/cache_miss counters for PURGE requests
