--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.3plus~rc1-wm16) precise; urgency=low
+
+  * Fix netmapper library deps
+
+ -- Brandon Black <bblack@wikimedia.org>  Thu, 19 Sep 2013 21:22:25 +0000
+
 varnish (3.0.3plus~rc1-wm15) precise; urgency=low
 
   * Add libvmod_netmapper
