--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.3plus~rc1-wm17) precise; urgency=low
+
+  * Update netmapper from b62b6c7a
+
+ -- Brandon Black <bblack@wikimedia.org>  Thu, 03 Oct 2013 15:19:46 +0000
+
 varnish (3.0.3plus~rc1-wm16) precise; urgency=low
 
   * Fix netmapper library deps
