varnish (3.0.3plus~rc1-wm23) precise; urgency=low
  * Use external, up-to-date jemalloc

   -- Brandon Black <bblack@wikimedia.org>  Thu, 05 Dec 2013 13:38:33 +0000

Change-Id: I1b75f6bec8816b560d86b2ecee453597f58a2f51

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.3plus~rc1-wm23) precise; urgency=low
+
+  * Use external, up-to-date jemalloc
+
+ -- Brandon Black <bblack@wikimedia.org>  Thu, 05 Dec 2013 13:38:33 +0000
+
 varnish (3.0.3plus~rc1-wm19) precise; urgency=low
 
   * Update netmapper to 553fa29a
