--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+varnish (3.0.5plus~wmftest-wm1) unstable; urgency=low
+
+  * Removed systemd-related things from baseline below
+  * Added README.WMF for git-buildpackage stuff
+  * Fixup for sphinx + our git-buildpackage flow
+  * Adds all the wmf-specific patches
+    
+ -- Brandon Black <bblack@wikimedia.org>  Thu, 19 Dec 2013 16:05:21 +0000
+
 varnish (3.0.5-1) unstable; urgency=low
 
   * Imported upstream version 3.0.5
