varnish (3.0.3plus~rc1-wm28) precise; urgency=low
  * Added fallocate for persistent storage

 -- Brandon Black <bblack@wikimedia.org>  Tue, 07 Jan 2014 06:12:50 +0000

Change-Id: If9216b79c231f1714d1827b8a7e019f73e79bda4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.3plus~rc1-wm28) precise; urgency=low
+
+  * Added fallocate for persistent storage
+
+ -- Brandon Black <bblack@wikimedia.org>  Tue, 07 Jan 2014 06:12:50 +0000
+
 varnish (3.0.3plus~rc1-wm27) precise; urgency=low
 
   * Updated netmapper w/ new fixes
