--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+varnish (3.0.5plus~wmftest-wm2) unstable; urgency=low
+
+  * Updated netmapper patch
+  * Added fallocate patch
+    
+ -- Brandon Black <bblack@wikimedia.org>  Tue, 07 Jan 2014 06:20:22 +0000
+
 varnish (3.0.5plus~wmftest-wm1) unstable; urgency=low
 
   * Removed systemd-related things from baseline below
