varnish (3.0.5plus~wmftest-wm3) unstable; urgency=low
  * Better fallocate patch

 -- Brandon Black <bblack@wikimedia.org>  Wed, 08 Jan 2014 18:33:16 +0000

Change-Id: If352686cee6457e864cc89e054975ccd7d91b901

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+varnish (3.0.5plus~wmftest-wm3) unstable; urgency=low
+
+  * Better fallocate patch
+    
+ -- Brandon Black <bblack@wikimedia.org>  Wed, 08 Jan 2014 18:33:16 +0000
+
 varnish (3.0.5plus~wmftest-wm2) unstable; urgency=low
 
   * Updated netmapper patch
