varnish (3.0.5plus~wmftest-wm4) unstable; urgency=low
  * Update netmapper to 139f4393 (bugfix + 3.0.5 test compat)

 -- Brandon Black <bblack@wikimedia.org>  Tue, 18 Feb 2014 20:30:48 +0000

Change-Id: I3ae8aba4ba64712514f373c786e7bd746d0dcb72

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,20 @@
+varnish (3.0.5plus~wmftest-wm4) unstable; urgency=low
+
+  * Update netmapper to 139f4393 (bugfix + 3.0.5 test compat)
+
+ -- Brandon Black <bblack@wikimedia.org>  Tue, 18 Feb 2014 20:30:48 +0000
+
 varnish (3.0.5plus~wmftest-wm3) unstable; urgency=low
 
   * Better fallocate patch
-    
+
  -- Brandon Black <bblack@wikimedia.org>  Wed, 08 Jan 2014 18:33:16 +0000
 
 varnish (3.0.5plus~wmftest-wm2) unstable; urgency=low
 
   * Updated netmapper patch
   * Added fallocate patch
-    
+
  -- Brandon Black <bblack@wikimedia.org>  Tue, 07 Jan 2014 06:20:22 +0000
 
 varnish (3.0.5plus~wmftest-wm1) unstable; urgency=low
