varnish (3.0.5plus~x-wm6) unstable; urgency=low
  * Updated libvmod-netmapper to f23e9634 (empty array support)
  * Added build dep for python-sphinx
  * Removed wmftest from version string

 -- Brandon Black <bblack@wikimedia.org>  Fri, 27 Jun 2014 15:47:07 +0000

Change-Id: I5ed5e417f2d52708a5c9988c1fe2d8b1f626c414

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+varnish (3.0.5plus~x-wm6) unstable; urgency=low
+
+  * Updated libvmod-netmapper to f23e9634 (empty array support)
+  * Added build dep for python-sphinx
+  * Removed wmftest from version string
+
+ -- Brandon Black <bblack@wikimedia.org>  Fri, 27 Jun 2014 15:47:07 +0000
+
 varnish (3.0.5plus~wmftest-wm5) unstable; urgency=low
 
   * Minor fixup to fallocate patchfile
