--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+varnish (3.0.6plus-wm6) jessie-wikimedia; urgency=low
+
+  * debian/rules update to not start varnishd on pkg install
+  * postrm compatibility with /var/lib/varnish as a mountpoint
+
+ -- Brandon Black <bblack@wikimedia.org>  Thu, 26 Feb 2015 20:34:00 +0000
+
 varnish (3.0.6plus-wm5) jessie-wikimedia; urgency=low
 
   * Added two new local patches:
