varnish (3.0.6plus-wm8) jessie-wikimedia; urgency=low
  * Added libvmod-tbf
  * Added libvmod-ipcast
  * Minor bugfixes to local fallocate and no-size-reduce patches

 -- Brandon Black <bblack@wikimedia.org>  Wed, 23 Sep 2015 23:37:10 +0000

Change-Id: Id6f30ed4d207100f11d31713c60926e5fdd11e15

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+varnish (3.0.6plus-wm8) jessie-wikimedia; urgency=low
+
+  * Added libvmod-tbf
+  * Added libvmod-ipcast
+  * Minor bugfixes to local fallocate and no-size-reduce patches
+
+ -- Brandon Black <bblack@wikimedia.org>  Wed, 23 Sep 2015 23:37:10 +0000
+
 varnish (3.0.6plus-wm6) jessie-wikimedia; urgency=low
 
   * debian/rules update to not start varnishd on pkg install
